--- a/web/index.html
+++ b/web/index.html
@@ -59,8 +59,8 @@
 					<p class="product_description card-text"></p>
 					<ul class="product-properties">
 						<li><span class="propert-name">Prijs:</span><span class="product_price"></span></li>
-						<li><span class="propert-name">Type hoesje:</span><span class="type_of_case"></span></li>
 						<li><span class="propert-name">Code:</span><span class="product_code"></span></li>
+						<li><span class="propert-name">Type hoesje:</span><span class="product_type_of_case"></span></li>
 					</ul>
 					<input class="product_amount" type="number" value="1" min="1">
 					<input class="product_id" type="hidden" name="id" data-json="">
@@ -125,7 +125,7 @@
               clone.querySelector(".product_description").textContent =`${product.description.substr(0, 100)}...`
               clone.querySelector(".product_price").textContent = `€ ${product.price.toFixed(2)}`
               clone.querySelector(".product_code").textContent = product.code
-			  clone.querySelector("type_of_case").textContent = product.type_of_case_name
+			  clone.querySelector(".product_type_of_case").textContent = product.type_of_case_name
               clone.querySelector(".product_id").value = product.id
               clone.querySelector(".product_id").dataset.json = JSON.stringify(product)
               clone.querySelector(".product_image").src =`/images/${product.id}.jpg`
