--- a/web/index.html
+++ b/web/index.html
@@ -33,22 +33,9 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item active">
-					<a class="btn btn-outline-success my-2 my-sm-0" href="#">Alle telefoonhoesjes<span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="#">Artikelen<span class="sr-only">(current)</span></a>
 				</li>
 			</ul>
-
-			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
-					<a class="btn btn-outline-success my-2 my-sm-0" href="kattychanel.html">Katty Chanel<span class="sr-only">(current)</span></a>
-				</li>
-			</ul>
-			
-			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
-					<a class="btn btn-outline-success my-2 my-sm-0" href="danadior.html">Dana Dior<span class="sr-only">(current)</span></a>
-				</li>
-			</ul>
-
 			<a
 				href="basket.html"><button class="btn btn-outline-success my-2 my-sm-0" type="submit">Winkelwagen <span class="num_products"></span></button></a>
 	    
